@@ -1,4 +1,11 @@
 
+2018-10-08  Simon Sobisch <simonsobisch@gnu.org>
+
+	* parser.y: warn about unimplemented OPEN REVERSED / WITH NO REWIND,
+	  see FR #343
+	* parser.y: RM/COBOL compatibility - allow LOCK clause on
+	  OPEN REVERSED / WITH NO REWIND
+
 2018-10-02  Simon Sobisch <simonsobisch@gnu.org>
 
 	* typeck.c (cb_validate_program_environment, cb_validate_program_data,
